Bug 259392 - vmstat row labels inconsistent (geom/eli)
Summary: vmstat row labels inconsistent (geom/eli)
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 12.2-STABLE
Hardware: Any Any
: --- Affects Some People
Assignee: Mateusz Guzik
URL:
Keywords: easy, needs-patch
Depends on:
Blocks:
 
Reported: 2021-10-24 04:07 UTC by dewayne
Modified: 2021-10-31 20:47 UTC (History)
3 users (show)

See Also:
koobs: maintainer-feedback? (pjd)
koobs: maintainer-feedback? (mjg)
koobs: maintainer-feedback? (trasz)
koobs: mfc-stable13?
koobs: mfc-stable12?
koobs: mfc-stable11-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dewayne 2021-10-24 04:07:36 UTC
While attempting to parse information from 
vmstat -m
it was apparent that "eli data" deviated from other geoms, such as "mirror_data" and "shsec_data".  

Is it possible to insert an underscore in "eli data"?
Comment 1 Kubilay Kocak freebsd_committer freebsd_triage 2021-10-24 04:33:55 UTC
^Triage: Request feedback from original geom/eli committer and recent committers to vmstat
Comment 2 commit-hook freebsd_committer freebsd_triage 2021-10-31 20:41:58 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=627d5d19664f8a7fc4c9c952ac4b15f8c9f29e95

commit 627d5d19664f8a7fc4c9c952ac4b15f8c9f29e95
Author:     Mateusz Guzik <mjg@FreeBSD.org>
AuthorDate: 2021-10-31 20:36:51 +0000
Commit:     Mateusz Guzik <mjg@FreeBSD.org>
CommitDate: 2021-10-31 20:36:51 +0000

    geli: eli data -> eli_data for consistency with other geom classes

    PR:     259392
    Reported by:    dewayne@heuristicsystems.com.au
    MFC after:      1 week

 sys/geom/eli/g_eli.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)