geli: eli data -> eli_data for consistency with other geom classes

PR:	259392
Reported by:	dewayne@heuristicsystems.com.au
MFC after:	1 week